--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,16 @@ dependencies {
     }
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
 
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
+
     implementation 'com.android.support:design:27.0.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
