Working module for getModel from Poly api

--- a/bernini/build.gradle
+++ b/bernini/build.gradle
@@ -17,6 +17,9 @@ kotlin {
         coroutines 'enable'
     }
 }
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+}
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
